kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acapdevila
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acapdevila-deployment
  namespace: acapdevila
  labels:
    app: acapdevila-stack
spec:
  replicas: 3
  selector:
    matchLabels:
      app: acapdevila-stack
  template:
    metadata:
      labels:
        app: acapdevila-stack
    spec:
      containers:
      - name: contenedor-acapdevila
        image: capdevila/curso-devops-lab3
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: acapdevila-service
  namespace: acapdevila
  labels:
    app: acapdevila-stack
spec:
  selector:
     app: acapdevila-stack
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acapdevila-ingress
  namespace: acapdevila
spec:
  ingressClassName: nginx
  rules:
  - host: app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acapdevila-service
            port:
              number: 80
